# PyLife

./: .env  .gitignore  README.md  app_data.py  dashboard.py  debug.py  main.py  pyproject.toml  server.py
data/: check_db.py  item_health.json  tracker.db
modules/: database.py  finance_manager.py  ocr_handler.py  report_generator.py  social_manager.py
output_modules/: analysis.py
