[project]
name = "college-expense-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.24.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "supabase>=2.26.0",
]
